# IPMPLS

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  compose.yaml  package-lock.json  pyproject.toml
crtnm/: __init__.py  main.py
crtnm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
crtnm/application/: __init__.py  audit_service.py  auth_service.py  configuration_service.py  inventory_service.py  monitoring_parser.py  monitoring_service.py  network_change_service.py  network_command_factory.py  report_service.py  user_service.py
crtnm/core/: __init__.py  config.py  security.py
crtnm/domain/: __init__.py  enums.py
crtnm/drivers/: __init__.py  contracts.py  exceptions.py  registry.py
crtnm/drivers/neon/: __init__.py  driver.py  prompts.py  telnet_client.py
crtnm/infrastructure/: __init__.py  celery_app.py  database.py  models.py  rate_limiter.py  tasks.py
crtnm/presentation/: __init__.py  dependencies.py  rate_limit_middleware.py  routes.py  schemas.py
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/hooks/: useInventory.tsx  useTopology.tsx
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_device_connection_username.py  0003_configuration_recovery.py  0004_network_change_plans.py  0005_monitoring.py
tests/: test_configuration_service.py  test_monitoring_parser.py  test_neon_prompts.py  test_network_command_factory.py  test_rate_limiter.py  test_report_service.py  test_security.py
(+21 files in other folders)
