[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "crtnm"
version = "0.1.0"
description = "Central Railway Telecom Network Manager"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13", "cryptography>=42", "fastapi>=0.115", "pydantic-settings>=2.6",
  "PyJWT>=2.9", "SQLAlchemy>=2.0", "uvicorn[standard]>=0.30", "netmiko>=4.4", "openpyxl>=3.1", "reportlab>=4.2", "celery[redis]>=5.4", "redis>=5.0", "psycopg[binary]>=3.2"
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.3", "pytest-cov>=5.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
include = ["crtnm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
